# CSPM-AWS-AutoRemediation

./: .gitignore  package.sh  pyproject.toml
CFN/: AWS-autoremediation-target.yaml  AWS-autoremediation.yaml
Lambda/DLPScanLabelActionLambda/: lambda_function.py  requirements.txt
Lambda/DLPScanLabelActionLambda/utils/: aws_utils.py  awsapi_helpers.py  logger.py
Lambda/GetNetskopeDLPScanAlertsLambda/: lambda_function.py
