[tool.poetry]
name = "cspm-aws-autoremediation"
version = "0.1.0"
description = ""
authors = ["Jeremiah Sullenger <jsullenger@cloudrise.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
boto3 = "1.20.24"
botocore = "1.23.24"
s3fs = "^2022.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
